# mlops-basicplatform-iris-classification

./: README.md
model-template/my_model/: Dockerfile  pyproject.toml
model-template/my_model/src/my_model/serving/: main.py
model-template/my_model/src/my_model/training/: train.py
